--- a/website/admin/package.json
+++ b/website/admin/package.json
@@ -38,6 +38,7 @@
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.5.2",
     "recoil": "^0.7.7",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.6"
