--- a/website/admin/.env
+++ b/website/admin/.env
@@ -2,5 +2,5 @@
 NEXT_PUBLIC_API_ENDPOINT='http://localhost:5000/mtym-api/'
 
 # AWS
-NEXT_PUBLIC_AWS_BUCKET_NAME='s3-bucket-name'
-NEXT_PUBLIC_AWS_BUCKET_REGION='eu-west-1'
+NEXT_PUBLIC_AWS_BUCKET_NAME='fma-mm'
+NEXT_PUBLIC_AWS_BUCKET_REGION='eu-north-1'
