--- a/website/admin/.gitignore
+++ b/website/admin/.gitignore
@@ -4,7 +4,7 @@
 /.pnp
 .pnp.js
 .yarn/install-state.gz
-
+.env
 package-lock.json
 
 # testing
@@ -20,7 +20,7 @@ package-lock.json
 # misc
 .DS_Store
 *.pem
-
+.env
 # debug
 npm-debug.log*
 yarn-debug.log*
