--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Add upstream and sync
         run: |
-          git remote add upstream https://github.com/ORIGINAL_OWNER/ORIGINAL_REPO.git
+          git remote add upstream https://github.com/aminemahd13/fma-website
           git fetch upstream
           git merge upstream/main --allow-unrelated-histories -m "Sync from upstream"
           git push origin main
