--- a/website/admin/.env
+++ b/website/admin/.env
@@ -1,5 +1,5 @@
 # API
-NEXT_PUBLIC_API_ENDPOINT='https://mfa-api.aminemahdane.com/mtym-api/'
+NEXT_PUBLIC_API_ENDPOINT='http://localhost:5000/mtym-api/'
 
 # AWS
 NEXT_PUBLIC_AWS_BUCKET_NAME='fma-mm'
