--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-social-media-embed": "^2.5.18"
   },
   "devDependencies": {
-    "@types/react": "^19.1.2",
+    "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3"
   }
 }
