--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,5 +1,15 @@
 FROM node:21
 
+# Install LaTeX and required packages for PDF generation
+RUN apt-get update && apt-get install -y \
+    texlive-latex-base \
+    texlive-latex-extra \
+    texlive-fonts-recommended \
+    texlive-fonts-extra \
+    texlive-lang-french \
+    texlive-xetex \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 COPY . .
