--- a/api/package.json
+++ b/api/package.json
@@ -48,6 +48,7 @@
     "nest-commander": "^3.13.0",
     "nestjs-s3": "^2.0.1",
     "nodemailer": "^6.9.13",
+    "puppeteer": "^24.12.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "tmp": "^0.2.3",
@@ -63,6 +64,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.8.0",
     "@types/nodemailer": "^6.4.15",
+    "@types/puppeteer": "^5.4.7",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
