--- a/api/package.json
+++ b/api/package.json
@@ -38,6 +38,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "@types/pdfkit": "^0.17.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -48,7 +49,7 @@
     "nest-commander": "^3.13.0",
     "nestjs-s3": "^2.0.1",
     "nodemailer": "^6.9.13",
-    "puppeteer": "^24.12.1",
+    "pdfkit": "^0.17.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "tmp": "^0.2.3",
@@ -64,7 +65,6 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.8.0",
     "@types/nodemailer": "^6.4.15",
-    "@types/puppeteer": "^5.4.7",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
